# Vanguard

./: .gitignore  CMakeLists.txt  Coverguard.cbp  Coverguard.depend  Coverguard.layout  LICENSE  Readme.md  Surveillance.cbp  Vanguard.cbp  allegro keys.txt  config.json  configure.py  configure_dynamic.py  crop_sprites.py  enemy_outline_gen.py  gamedata.json  generate_outlines.py  libenet.so.7  main.cpp  maprotation.json  multiclient.sh  names  prepare_sprites.py  settings.json  sfml keys  spriteoffsets.json  startserver.sh  techdebt  ultimates  update_sprites.py  updatesprites.sh  windows allegro.txt
CmakeModules/: FindLibUUID.cmake
include/: animation.h  character.h  colorpalette.h  configloader.h  datastructures.h  engine.h  entity.h  entityptr.h  explosion.h  flashbang.h  gamestate.h  global.h  global_constants.h  inputcatcher.h  json.hpp  logging.h  mainmenu.h  map.h  maskloader.h  mccree.h  movingentity.h  peacemaker.h  peacemakerbullet.h  player.h  renderer.h  spriteloader.h  timer.h  weapon.h
include/ingameelements/: character.h  clipweapon.h  corpse.h  explosion.h  health.h  map.h  movingentity.h  player.h  projectile.h  shield.h  spawnroom.h  trail.h  weapon.h
include/ingameelements/gamemodes/: controlmanager.h  gamemodemanager.h  kothmanager.h
include/ingameelements/heroes/: lucio.h  mccree.h  reinhardt.h  soldier76.h
include/ingameelements/projectiles/: earthshatter.h  firestrike.h  flashbang.h  peacemakerbullet.h  sonicproj.h
include/ingameelements/weapons/: hammer.h  peacemaker.h  pulserifle.h  reinhardtshield.h  sonicamp.h
include/mapelements/: controlpoint.h  spawnroom.h
include/networking/: buffer.h  clientnetworker.h  eventhandler.h  networker.h  servernetworker.h  uuid.h
include/visuals/: defaulthud.h  hud.h  lobbymenu.h  mainmenu.h  mainmenubutton.h  menu.h  menuanimation.h  menucontainer.h  optionsmenu.h
mapconverter/: gg2mapparser.py
maps/: conflict_wm.wallmask  lijiang.json  wm_converter.py
maps/koth_Coldfront/: mapdata.json
maps/koth_bloodmoon/: mapdata.json
maps/koth_launcharea/: mapdata.json
maps/koth_nuansje_a2/: mapdata.json
maps/lijiang/: mapdata.json
sprites/: spritedata.json
sprites template/ui/Logo/: VanguardLogo.psd  coverguard_logo.psd
sprites template/ui/Menu/: Playsubmenu.psd
sprites template/ui/ingame/: OLD.psd  TEMPLATE.psd
sprites template/ui/ingame/mccree/: Mccree_UI.psd
src/: animation.cpp  character.cpp  colorpalette.cpp  configloader.cpp  engine.cpp  entity.cpp  explosion.cpp  gamestate.cpp  global.cpp  inputcatcher.cpp  mainmenu.cpp  map.cpp  maskloader.cpp  movingentity.cpp  player.cpp  projectile.cpp  renderer.cpp  spriteloader.cpp  timer.cpp  weapon.cpp
src/Heroes/: mccree.cpp
src/Projectiles/: flashbang.cpp  peacemakerbullet.cpp
src/Weapons/: peacemaker.cpp
src/backward-stacktrace/: backward.cpp
src/ingameelements/: character.cpp  clipweapon.cpp  corpse.cpp  explosion.cpp  health.cpp  map.cpp  movingentity.cpp  player.cpp  projectile.cpp  shield.cpp  spawnroom.cpp  trail.cpp  weapon.cpp
src/ingameelements/gamemodes/: controlmanager.cpp  gamemodemanager.cpp  kothmanager.cpp
src/ingameelements/heroes/: lucio.cpp  mccree.cpp  reinhardt.cpp  soldier76.cpp
src/ingameelements/projectiles/: earthshatter.cpp  firestrike.cpp  flashbang.cpp  peacemakerbullet.cpp  sonicproj.cpp
src/ingameelements/weapons/: hammer.cpp  peacemaker.cpp  pulserifle.cpp  reinhardtshield.cpp  sonicamp.cpp
src/mapelements/: controlpoint.cpp  spawnroom.cpp
src/networking/: buffer.cpp  clientnetworker.cpp  eventhandler.cpp  networker.cpp  servernetworker.cpp  uuid.cpp
src/visuals/: defaulthud.cpp  lobbymenu.cpp  mainmenu.cpp  mainmenubutton.cpp  menuanimation.cpp  menucontainer.cpp  optionsmenu.cpp
